--- a/src/Result/Result.css
+++ b/src/Result/Result.css
@@ -16,6 +16,7 @@
    justify-content: center;
    width: 100vw;
    height: calc(100vh - 60px);
+   overflow-x: hidden;
 }
 
 .result-info {
